--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" sizes="64x64" href="favicon.png" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>😅</title>
+    <title>YOU DONE</title>
 
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
