--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" sizes="64x64" href="favicon.png" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>YOU DONE</title>
+    <title>You’re done!</title>
 
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
@@ -21,7 +21,7 @@
         --font-family: 'Poppins', sans-serif;
         --font-color: #ffffff;
         --line-height: 1.4;
-        --mobile-font-size: 22px;
+        --mobile-font-size: 40px;
         --desktop-font-size: 36px;
 
         /* Opacity for “less prominent” lines */
@@ -62,17 +62,21 @@
       }
       .countdown-line {
         margin: 0.5em 0;
+        opacity: 1; /* Default to prominent */
       }
-      /* Day, month, quarter, and year are less prominent */
-      #day-line,
+      /* Lines that are always dimmed if visible */
       #month-line,
       #quarter-line,
       #year-line {
         opacity: var(--faded-opacity);
       }
-      /* Week is now the most prominent */
+      /* Line that is always prominent if visible */
       #week-line {
         opacity: 1;
+      }
+      /* Class for dynamically fading the day line */
+      .day-faded {
+        opacity: var(--faded-opacity);
       }
       .hidden {
         display: none;
@@ -94,6 +98,46 @@
       #loading-emoji {
         font-size: 5rem;
       }
+
+      /* Debug dialog */
+      #debug-dialog {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background: rgba(255, 255, 255, 0.95);
+        padding: 1.5rem 2rem;
+        border-radius: 0.5rem;
+        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.4);
+        z-index: 2000;
+        display: none; /* Initially hidden */
+        min-width: 280px;
+        text-align: center;
+      }
+      #debug-dialog input[type='datetime-local'] {
+        width: calc(100% - 20px);
+        margin: 0.75rem 0 1rem;
+        padding: 0.6rem 0.8rem;
+        font-size: 1rem;
+        border: 1px solid #ccc;
+        border-radius: 0.25rem;
+        box-sizing: border-box;
+      }
+      #debug-dialog button {
+        width: 100%;
+        margin: 0.5rem 0;
+        padding: 0.75rem;
+        font-size: 1.1rem;
+        border: none;
+        border-radius: 0.25rem;
+        cursor: pointer;
+        background-color: #007bff;
+        color: white;
+        transition: background-color 0.2s ease;
+      }
+      #debug-dialog button:hover {
+        background-color: #0056b3;
+      }
     </style>
   </head>
 
@@ -110,6 +154,11 @@
       <div id="year-line" class="countdown-line"></div>
     </div>
 
+    <div id="debug-dialog">
+      <input type="datetime-local" id="debug-datetime" />
+      <button id="apply-btn">Apply</button>
+    </div>
+
     <script>
       // ──────────────── CONSTANTS ────────────────
       const TARGET_DATE = new Date(
@@ -120,24 +169,29 @@
       const EMOJIS = ['🏆', '🤩', '💯', '👹', '🎉', '😅', '😎', '🤘', '🌈'];
       const WEEK_START_DAY = 5; // Friday (0=Sun,1=Mon,…5=Fri)
       const DAY_END_HOUR = 17; // 5 PM
+      const DEBUG_KEY = 'd';
 
-      const mobileQuery = window.matchMedia('(max-width: 600px)');
+      // Helper to format Date for datetime-local input
+      function formatDateForInput(date) {
+        const year = date.getFullYear();
+        const month = (date.getMonth() + 1).toString().padStart(2, '0');
+        const day = date.getDate().toString().padStart(2, '0');
+        const hours = date.getHours().toString().padStart(2, '0');
+        const minutes = date.getMinutes().toString().padStart(2, '0');
+        return `${year}-${month}-${day}T${hours}:${minutes}`;
+      }
 
-      // ────────────── INITIALIZATION ──────────────
       window.addEventListener('DOMContentLoaded', () => {
         const rand = EMOJIS[Math.floor(Math.random() * EMOJIS.length)];
         document.getElementById('loading-emoji').textContent = rand;
 
         updateCountdown(new Date());
-
-        hideLoadingOverlay(); // Will now hide instantly
+        hideLoadingOverlay();
+        setupDebugDialog();
       });
 
-      // ─────────────── COUNTDOWN LOGIC ───────────────
-      function updateCountdown(referenceDate) {
-        const now = referenceDate;
-        let target = TARGET_DATE;
-
+      function updateCountdown(now) {
+        const target = TARGET_DATE;
         if (now >= target) {
           showOnlyDoneMessage();
           return;
@@ -149,49 +203,38 @@
         const quartersRemaining = computeQuartersRemaining(now, target);
         const yearsRemaining = computeYearsRemaining(now, target);
 
-        // Build each line’s text & show/hide logic
         let dayText = '';
-        if (daysRemaining <= 1) {
+        const isAfterDayEnd = now.getHours() >= DAY_END_HOUR;
+
+        if (daysRemaining === 1) {
           dayText = 'Final day';
+        } else if (isAfterDayEnd) {
+          dayText = `Tomorrow plus ${daysRemaining - 1} more`;
+          if (daysRemaining - 1 <= 0) {
+            dayText = 'Tomorrow';
+          }
         } else {
           dayText = `Today plus ${daysRemaining - 1} more`;
         }
 
-        let weekText = ''; // Week is always shown if day line is faded
-        if (weeksRemaining <= 1) {
-          weekText = 'Final week';
-        } else {
+        let weekText = null;
+        if (weeksRemaining >= 2) {
           weekText = `This week plus ${weeksRemaining - 1} more`;
         }
 
         let monthText = null;
-        // Month only shows if more than 1 week remains
-        const showMonth = weeksRemaining > 1;
-        if (showMonth) {
-          monthText =
-            monthsRemaining <= 1
-              ? 'Final month'
-              : `This month plus ${monthsRemaining - 1} more`;
+        if (monthsRemaining >= 2) {
+          monthText = `This month plus ${monthsRemaining - 1} more`;
         }
 
         let quarterText = null;
-        // Quarter only shows if more than 1 month remains
-        const showQuarter = monthsRemaining > 1;
-        if (showQuarter) {
-          quarterText =
-            quartersRemaining <= 1
-              ? 'Final quarter'
-              : `This quarter plus ${quartersRemaining - 1} more`;
+        if (quartersRemaining >= 2) {
+          quarterText = `This quarter plus ${quartersRemaining - 1} more`;
         }
 
         let yearText = null;
-        // Year only shows if more than 1 quarter remains
-        const showYear = quartersRemaining > 1;
-        if (showYear) {
-          yearText =
-            yearsRemaining <= 1
-              ? 'Final year'
-              : `This year plus ${yearsRemaining - 1} more`;
+        if (yearsRemaining >= 2) {
+          yearText = `This year plus ${yearsRemaining - 1} more`;
         }
 
         writeRealLines(dayText, weekText, monthText, quarterText, yearText);
@@ -204,15 +247,25 @@
         const q = document.getElementById('quarter-line');
         const y = document.getElementById('year-line');
 
-        // Day is always shown if time remains
+        // Day line
         d.textContent = dayT;
         d.classList.remove('hidden');
+        // Only fade if any of the variables (weekT/monthT/quarterT/yearT) is non-null
+        if (weekT || monthT || quarterT || yearT) {
+          d.classList.add('day-faded');
+        } else {
+          d.classList.remove('day-faded');
+        }
 
-        // Week is always shown if time remains
-        w.textContent = weekT;
-        w.classList.remove('hidden');
+        // Week line
+        if (weekT) {
+          w.textContent = weekT;
+          w.classList.remove('hidden');
+        } else {
+          w.classList.add('hidden');
+        }
 
-        // Month
+        // Month line
         if (monthT) {
           m.textContent = monthT;
           m.classList.remove('hidden');
@@ -220,7 +273,7 @@
           m.classList.add('hidden');
         }
 
-        // Quarter
+        // Quarter line
         if (quarterT) {
           q.textContent = quarterT;
           q.classList.remove('hidden');
@@ -228,13 +281,45 @@
           q.classList.add('hidden');
         }
 
-        // Year
+        // Year line
         if (yearT) {
           y.textContent = yearT;
           y.classList.remove('hidden');
         } else {
           y.classList.add('hidden');
         }
+      }
+
+      function setupDebugDialog() {
+        const dialog = document.getElementById('debug-dialog');
+        const input = document.getElementById('debug-datetime');
+        const applyBtn = document.getElementById('apply-btn');
+
+        window.addEventListener('keydown', (e) => {
+          if (e.key === DEBUG_KEY) {
+            dialog.style.display =
+              dialog.style.display === 'none' ? 'block' : 'none';
+            if (dialog.style.display === 'block') {
+              // Only set to current time if field is empty
+              if (!input.value) {
+                input.value = formatDateForInput(new Date());
+              }
+            }
+          }
+        });
+
+        window.addEventListener('keydown', (e) => {
+          if (e.key === 'Escape' && dialog.style.display === 'block') {
+            dialog.style.display = 'none';
+          }
+        });
+
+        applyBtn.addEventListener('click', () => {
+          const val = input.value;
+          if (!val) return;
+          updateCountdown(new Date(val));
+          dialog.style.display = 'none';
+        });
       }
 
       function showOnlyDoneMessage() {
@@ -255,16 +340,25 @@
       // ─────────────── TIME CALCULATIONS ───────────────
       function computeDaysRemaining(now, target) {
         const currentDayBlock = getPrevious5pm(now);
-        const targetDayBlock = getPrevious5pm(target);
+        let targetBlock = new Date(target);
 
-        const diffMs = targetDayBlock - currentDayBlock;
+        if (
+          targetBlock.getHours() === DAY_END_HOUR &&
+          targetBlock.getMinutes() === 0 &&
+          targetBlock.getSeconds() === 0 &&
+          targetBlock.getMilliseconds() === 0
+        ) {
+          targetBlock.setDate(targetBlock.getDate() - 1);
+        }
+        targetBlock.setHours(DAY_END_HOUR, 0, 0, 0);
+
+        const diffMs = targetBlock - currentDayBlock;
         const daysBetween = Math.round(diffMs / (24 * 60 * 60 * 1000));
         return daysBetween + 1;
       }
 
       function getPrevious5pm(dt) {
-        const d = new Date(dt.getTime());
-
+        const d = new Date(dt);
         if (d.getHours() < DAY_END_HOUR) {
           d.setDate(d.getDate() - 1);
         }
@@ -273,88 +367,42 @@
       }
 
       function computeWeeksRemaining(now, target) {
-        const currentBlock = getLastFriday5pm(now);
-        const targetBlock = getLastFriday5pm(target);
-
-        const diffMs = targetBlock - currentBlock;
-        const weeksBetween = Math.round(diffMs / (7 * 24 * 60 * 60 * 1000));
-        return weeksBetween + 1;
-      }
-
-      function getLastFriday5pm(dt) {
-        const d = new Date(dt.getTime());
-        const day = d.getDay();
-        let deltaDays;
-
-        if (day > WEEK_START_DAY) {
-          deltaDays = day - WEEK_START_DAY;
-        } else if (day < WEEK_START_DAY) {
-          deltaDays = day + (7 - WEEK_START_DAY);
-        } else {
-          if (d.getHours() < DAY_END_HOUR) {
-            deltaDays = 7;
-          } else {
-            deltaDays = 0;
-          }
-        }
-
-        d.setDate(d.getDate() - deltaDays);
-        d.setHours(DAY_END_HOUR, 0, 0, 0);
-        return d;
+        const diffMs = target - now;
+        const oneWeekMs = 7 * 24 * 60 * 60 * 1000;
+        return diffMs <= 0 ? 0 : Math.ceil(diffMs / oneWeekMs);
       }
 
       function computeMonthsRemaining(now, target) {
-        const cmStart = new Date(
-          now.getFullYear(),
-          now.getMonth(),
-          1,
-          0,
-          0,
-          0,
-          0
-        );
-        const tmStart = new Date(
-          target.getFullYear(),
-          target.getMonth(),
-          1,
-          0,
-          0,
-          0,
-          0
-        );
-
+        const cmStart = new Date(now.getFullYear(), now.getMonth(), 1);
+        const tmStart = new Date(target.getFullYear(), target.getMonth(), 1);
         const yearDiff = tmStart.getFullYear() - cmStart.getFullYear();
         const monthDiff = tmStart.getMonth() - cmStart.getMonth();
         return yearDiff * 12 + monthDiff + 1;
       }
 
       function computeQuartersRemaining(now, target) {
-        const currQuarterStart = getQuarterStart(now);
-        const targQuarterStart = getQuarterStart(target);
-        const currIndex =
-          currQuarterStart.getFullYear() * 4 +
-          Math.floor(currQuarterStart.getMonth() / 3);
-        const targIndex =
-          targQuarterStart.getFullYear() * 4 +
-          Math.floor(targQuarterStart.getMonth() / 3);
-        return targIndex - currIndex + 1;
+        const currQ = getQuarterStart(now);
+        const targQ = getQuarterStart(target);
+        const currIdx =
+          currQ.getFullYear() * 4 + Math.floor(currQ.getMonth() / 3);
+        const targIdx =
+          targQ.getFullYear() * 4 + Math.floor(targQ.getMonth() / 3);
+        return targIdx - currIdx + 1;
       }
 
       function getQuarterStart(dt) {
         const y = dt.getFullYear();
         const m = dt.getMonth();
-        const qIndex = Math.floor(m / 3);
-        const qMonth = qIndex * 3;
-        return new Date(y, qMonth, 1, 0, 0, 0, 0);
+        const qIdx = Math.floor(m / 3);
+        return new Date(y, qIdx * 3, 1);
       }
 
       function computeYearsRemaining(now, target) {
-        const cyStart = new Date(now.getFullYear(), 0, 1, 0, 0, 0, 0);
-        const tyStart = new Date(target.getFullYear(), 0, 1, 0, 0, 0, 0);
+        const cyStart = new Date(now.getFullYear(), 0, 1);
+        const tyStart = new Date(target.getFullYear(), 0, 1);
         return tyStart.getFullYear() - cyStart.getFullYear() + 1;
       }
 
-      // ─────────── LOADING OVERLAY ───────────
       function hideLoadingOverlay() {
         document.getElementById('loading-overlay').style.display = 'none';
       }
